# python-module-based

./: .gitignore  README.md
child_library/: README.md  __init__.py  main.py  pyproject.toml
child_library/controllers/: subtraction_controller.py
child_library/handlers/: math_handler.py
parent_module/: .env  main.py  pyproject.toml
parent_module/controllers/: health_controller.py  math_controller.py
parent_module/handlers/: health_handler.py
